methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:25: error: not found: value makeV
  makeV();
  ^